# kodegen-tools-github

./: Cargo.toml  README.md
examples/: github_demo.rs
examples/common/: mod.rs
src/: lib.rs  main.rs
src/github/: add_issue_comment.rs  add_pull_request_review_comment.rs  client.rs  code_scanning_alerts.rs  create_branch.rs  create_issue.rs  create_or_update_file.rs  create_pull_request.rs  create_pull_request_review.rs  create_release.rs  create_repository.rs  delete_branch.rs  error.rs  fork_repository.rs  get_commit.rs  get_file_contents.rs  get_issue.rs  get_issue_comments.rs  get_me.rs  get_pull_request_comments.rs  get_pull_request_files.rs  get_pull_request_reviews.rs  get_pull_request_status.rs  list_branches.rs  list_commits.rs  list_issues.rs  list_pull_requests.rs  merge_pull_request.rs  mod.rs  push_files.rs  request_copilot_review.rs  search_code.rs  search_issues.rs  search_users.rs  secret_scanning_alerts.rs  update_issue.rs  update_pull_request.rs  upload_release_asset.rs  util.rs
src/github/client/: experimental.rs  issues.rs  mod.rs  pull_requests.rs  releases.rs  repositories.rs  security.rs  users.rs
src/github/search_repositories/: analysis.rs  cache.rs  config.rs  convenience.rs  fetch.rs  helpers.rs  mod.rs  rate_limiter.rs  types.rs
src/github/search_repositories/analysis/: activity.rs  api_metrics.rs  local.rs  mod.rs  security.rs
src/github/search_repositories/metrics/: ci_cd.rs  code_quality.rs  dependencies.rs  documentation.rs  mod.rs  readme.rs  security.rs  structure.rs  tests.rs
src/github/search_repositories/metrics/dependencies/: freshness.rs  mod.rs  registry.rs  types.rs  version.rs
src/runtime/: async_task.rs  mod.rs
src/tool/: add_issue_comment.rs  add_pull_request_review_comment.rs  code_scanning_alerts.rs  create_branch.rs  create_issue.rs  create_or_update_file.rs  create_pull_request.rs  create_pull_request_review.rs  create_repository.rs  delete_branch.rs  fork_repository.rs  get_commit.rs  get_file_contents.rs  get_issue.rs  get_issue_comments.rs  get_me.rs  get_pull_request_files.rs  get_pull_request_reviews.rs  get_pull_request_status.rs  list_branches.rs  list_commits.rs  list_issues.rs  list_pull_requests.rs  merge_pull_request.rs  mod.rs  push_files.rs  request_copilot_review.rs  search_code.rs  search_issues.rs  search_repositories.rs  search_users.rs  secret_scanning_alerts.rs  update_issue.rs  update_pull_request.rs
tests/: github.rs  runtime.rs  test_lib.rs
tests/github/: test_code_scanning_alerts.rs  test_get_commit.rs  test_list_branches.rs  test_list_commits.rs  test_merge_pull_request.rs  test_search_code.rs  test_search_users.rs  test_secret_scanning_alerts.rs
tests/runtime/: test_async_task.rs
