[package]
name = "kodegen_tools_github"
version = "0.4.0"
edition = "2024"
description = "KODEGEN.ᴀɪ: Memory-efficient, Blazing-Fast, MCP tools for code generation agents."
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-tools-github"
readme = "README.md"
categories = ["development-tools", "command-line-utilities", "api-bindings"]
keywords = [
    "mcp",
    "terminal",
    "agent",
    "filesystem",
    "claude"
]
license = "Apache-2.0 OR MIT"

[package.metadata.bundle]
identifier = "ai.kodegen.kodegen_tools_github"
publisher = "KODEGEN.ᴀɪ"
copyright = "Copyright © 2025"
short_description = "Memory-efficient, Blazing-Fast, MCP tools for code generation agents."

[package.metadata.bundle.category]
linux = "Development"
macos = "public.app-category.developer-tools"


[dependencies]
kodegen_mcp_schema = { version = "0.4" }
kodegen_mcp_tool = { version = "0.4" }
kodegen_utils = { version = "0.4" }
kodegen_config_manager = { version = "0.4" }
kodegen_server_http = { version = "0.4" }
schemars = "1"
rmcp = { version = "0.9", features = ["client", "schemars", "server", "transport-sse-server", "transport-child-process", "transport-io", "transport-sse-client", "transport-sse-client-reqwest", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }


octocrab    = "0.47"
bytes       = "1"
snafu       = "0.8"
thiserror   = "2"
anyhow      = "1"
chrono      = "0.4"
log         = "0.4"
env_logger  = "0.11"
tokio       = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "fs"] }
tokio-stream = "0.1"
futures     = "0.3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
toml        = "0.9"
walkdir     = "2"
lazy_static = "1"
regex       = "1"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"] }
rustls      = { version = "0.23", features = ["ring"] }
urlencoding = "2"
semver      = "1"
lru         = "0.16"
tempfile    = "3"
jsonwebtoken = "9"
gix = { version = "0.74", features = ["worktree-mutation", "blocking-network-client"] }
# Explicit dependencies to fix Docker build transitive dependency resolution
gix-lock = "19"
gix-tempfile = "19"
gix-utils = "0.3"

[dev-dependencies]
kodegen_mcp_client = { version = "0.4" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tempfile    = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["mcp"]
mcp = []  # Feature flag for MCP tools

[lib]
name = "kodegen_tools_github"
path = "src/lib.rs"

[[bin]]
name = "kodegen-github"
path = "src/main.rs"
